# libvmod-shards

./: .gitmodules  .travis.yml  COPYING  Makefile.am  README.rst  configure.ac  package.sh  vmod-shards.spec
debian/: changelog  control  dirs  rules
src/: Makefile.am  vmod_shards.c  vmod_shards.vcc
src/tests/: test01.vtc
